--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,21 +1,34 @@
+.head-grid {
+    display: grid;
+    grid-template-columns: auto 31% auto;
+    width: 50%;
+    margin: 3% auto;
+    align-content: start;
+}
+
+h2 {
+    padding-left: 10px;
+}
+
 .grid-con {
     display: grid;
     grid-template-columns: auto auto auto;
     width: 50%;
     margin: auto;
-    
 }
 
 .photo {
     width: 70%;
     min-width:  250px;
     padding: 0;
-    
+    float: left;
+    margin-bottom: 5px;
 }
 
 .grid-item {
     min-width: 275px;
     padding: 0 2.5%;
+    margin-right: 10px;
 }
 
 .item2, .item5 {
@@ -32,22 +45,47 @@ h5 {
     float: right;
     font-weight: 400;
 }
+
 h4 {
-    float: none;
+    clear: both;
+    margin-top: 3px;
+    font-size: 18px;
+}
+
+.foot {
+    padding-top: 2em;
+    width: 100%;
+    font-size: 12px;
+    text-align: center;
+    color: grey;
+   
 }
 
 @media only screen and (max-width: 950px) {
     .grid-con {
         grid-template-columns: auto auto;
-        width: 90%;
-        margin: auto;
+        margin: 0;
+        
+    }
+
+    h2 {
+        padding-left: 0%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto;
+        margin:0;
+        width: 80%;
     }
 
     .photo {
-        min-width: 165px;
+        min-width: 175px;      
     }
 
-    
+    .grid-item {
+        max-width: 200px;
+        min-width: 200px;
+    }
 
     .item4, .item6 {
         margin-top: 20%;
@@ -57,13 +95,16 @@ h4 {
         margin-top: 0%;
     }
 
-    h5 {
-        margin-right: 20%;
-
-    }
-
     .grid-item {
         padding: 0;
-        
+        margin-right: 10px;
     }
+
+    h5 {
+        margin-left: 0;
+    }
+
+
+
+  
 }
