--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,6 @@
 .head-grid {
     display: grid;
-    grid-template-columns: auto 27% auto;
+    grid-template-columns: auto 22% 41%;
     width: 50%;
     margin: 3% auto;
     align-content: start;
@@ -62,11 +62,170 @@ h4 {
    
 }
 
+@media only screen and (max-width: 1625px) {
+    .grid-con {
+        width: 50%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 50%;
+        
+    }
+}
+
+
+@media only screen and (max-width: 1550px) {
+    .grid-con {
+        width: 55%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 55%;
+        
+    }
+}
+
+@media only screen and (max-width: 1475x) {
+    .grid-con {
+        width: 60%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 60%;
+        
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    .grid-con {
+        width: 65%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 65%;
+        
+    }
+}
+
+@media only screen and (max-width: 1325px) {
+    .grid-con {
+        width: 70%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 70%;
+        
+    }
+}
+
+@media only screen and (max-width: 1250px) {
+    .grid-con {
+        width: 75%;
+    }
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 75%;
+        
+    }
+}
+
+@media only screen and (max-width: 1175px) {
+    .grid-con {
+        width: 80%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 80%;
+        
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .grid-con {
+        width: 85%;
+    }
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 85%;
+        
+    }
+}
+
+@media only screen and (max-width: 1025px) {
+    .grid-con {
+        width: 90%;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 90%;
+        
+    }
+}
+
 @media only screen and (max-width: 950px) {
+    .grid-con {
+        width: 95%;
+    }
+}
+
+@media only screen and (max-width: 890px) {
+    .grid-con {
+        width: 100%;
+    }
+
+    .photo {
+        min-width: 235px;      
+    }
+
+    .grid-item {
+        max-width: 260px;
+        min-width: 260px;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 22% 41%;
+        width: 98%;
+        
+    }
+
+    
+}
+
+
+@media only screen and (max-width: 825px) {
+    .grid-con {
+        width: 100%;
+    }
+
+    .photo {
+        min-width: 200px;      
+    }
+
+    .grid-item {
+        max-width: 225px;
+        min-width: 225px;
+    }
+
+    .head-grid {
+        grid-template-columns: auto 20% 41%;
+        width: 98%;
+        
+    }
+}
+
+
+@media only screen and (max-width: 750px) {
     .grid-con {
         grid-template-columns: auto auto;
         margin: 0;
-        
+        width: 80%;
     }
 
     h2 {
@@ -80,12 +239,12 @@ h4 {
     }
 
     .photo {
-        min-width: 175px;      
+        min-width: 250px;      
     }
 
     .grid-item {
-        max-width: 200px;
-        min-width: 200px;
+        max-width: 275px;
+        min-width: 275px;
     }
 
     .item4, .item6 {
@@ -108,4 +267,55 @@ h4 {
 
 
   
+}
+/*
+
+@media only screen and (max-width: 775px) {
+    .photo {
+        min-width: 225px;      
+    }
+
+    .grid-item {
+        max-width: 250px;
+        min-width: 250px;
+    }
+    
+} */
+
+
+@media only screen and (max-width: 700px) {
+    .photo {
+        min-width: 200px;      
+    }
+
+    .grid-item {
+        max-width: 225px;
+        min-width: 225px;
+    }
+    
+}
+
+
+@media only screen and (max-width: 600px) {
+    .photo {
+        min-width: 175px;      
+    }
+
+    .grid-item {
+        max-width: 200px;
+        min-width: 200px;
+    }
+    
+}
+
+@media only screen and (max-width: 500px) {
+    .photo {
+        min-width: 150px;      
+    }
+
+    .grid-item {
+        max-width: 175px;
+        min-width: 175px;
+    }
+    
 }
